# NGS_barcode

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  requirements.txt
src/: generate_barcodes.py  validate_barcodes.py
src/barcadia/: cli.py
src/tools/: __init__.py  generate_random_sequences.py  memory_benchmark.py
src/utils/: __init__.py  config_utils.py  dna_utils.py  filter_utils.py  generate_random_sequences.py  memory_benchmark.py
