[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barcadia"
version = "3.0"
description = "Best-in-class toolkit for large-scale NGS barcode generation and validation"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Danting Jiang"}]
requires-python = ">=3.12"
dependencies = [
  "numpy==2.2.6",
  "numba==0.61.2",
  "llvmlite==0.44.0",
  "psutil==7.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["barcadia"]

[project.scripts]
barcadia = "barcadia.cli:main"
